# Railway-PostgreSQL

./: DEPLOYMENT_GUIDE.md  Pasted-def-format-customer-name-name-name-re-sub-r-s-name-strip--1748811211706.txt  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  add_users.py  bot.py  check_database.py  config.py  database.py  fleet_report_clean.py  fleet_report_formatter.py  group_report_clean.py  handlers.py  keyboards.py  list_formatter.py  main.py  main_backup.py  main_polling.py  main_railway.py  main_simple.py  main_webhook_backup.py  new_report_format.py  new_report_format_backup.py  north_sea_bot.db  pyproject.toml  railway.toml  railway_database.py  railway_database_backup.py  replit.txt  test_exchange_rate.py  test_fleet_display.py  test_fleet_report.py  test_telegram_exchange.py  timezone_utils.py  utils.py
attached_assets/: Pasted--Asia-Taipei-2025-06-03-01-51-56-518-main-2025-06-03-01-51--1748915555710.txt  Pasted-2025-06-03-04-21-12-927-httpx-INFO-HTTP-Request-POST-https-api-telegram-org-bot7946349508-A-1748924527911.txt  Pasted-2025-06-03-04-47-29-914-HTTPX-http-POST-SD1-https-api-telegram-org-bot7946349508-aahot7-1748927022891.txt  Pasted-Starting-Container-Asia-Taipei-2025-06-03-03-51-55-950-main-INFO-Startin-1748923963087.txt  Pasted-Starting-Container-Asia-Taipei-2025-06-03-04-18-56-984-main-INFO-Startin-1748924584488.txt  Pasted-You-reached-the-start-of-the-range-Jun-3-2025-10-08-AM-Starting-Container-Asia-Tai-1748916677858.txt  Pasted-docker-image-ghcr-io-railwayapp-railpack-runtime-latest-0s-docker-image-ghcr-io-railwayapp-1748914027804.txt
(+3 files in other folders)
