[project]
name = "north-sea-financial-bot"
version = "1.0.0"
description = "North Sea Financial Management Telegram Bot"
requires-python = ">=3.11"
dependencies = [
    "aiohttp==3.10.11",
    "googlemaps==4.10.0", 
    "psycopg2-binary==2.9.10",
    "python-telegram-bot==22.1",
    "telegram==0.0.1",
    "trafilatura==1.12.2"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"